fix phone screen overflow on x

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,9 +26,9 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 
     body {
-
         font-family: $font-family;
         color: $white-color;
         background-color: $primary-color;
