--- a/src/styles/layout/navbar.module.scss
+++ b/src/styles/layout/navbar.module.scss
@@ -181,7 +181,7 @@ nav.navbar {
       flex-direction: column;
       align-items: stretch;
       justify-content: space-between;
-      transform: translateX(-100%);
+      transform: translateX(-150%);
       transition: 0.3s ease;
 
       &.open {
@@ -253,7 +253,7 @@ nav.navbar {
       .itemsHolder {
         right: 0;
         left: auto;
-        transform: translateX(100%);
+        transform: translateX(150%);
 
         &.open {
           transform: translateX(0);
